Fixing blocker bug 106527 (as part of bug 69468), allow creation of atoms for empty strings but don't crash when creating atoms for strings that have no internal buffer. r=dbaron@netscape.com, sr=brendan@mozilla.org